--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   }
 
   h1 {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     margin-bottom: 20px;
   }
 
@@ -100,7 +100,7 @@
 
 <!-- PAGE 1 -->
 <div class="container" id="page1">
-  <h1>💘 FRENCESS JADE,<br>WILL YOU BE MY VALENTINE? 💘</h1>
+  <h1>💘 Frencess Jade M. Barco,<br>Will you be my Valentine? 💘</h1>
   <button class="tease" onclick="heartExplosion(event)">YES</button>
   <button onclick="heartExplosion(event)">YES</button>
 </div>
